codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__toast__tests__render_error_toast_snapshot.snap
---
source: tui/src/bottom_pane/toast_tests.rs
expression: terminal.backend()
---
"                                                            "
"  ┃                                                      │  "
"  ┃                                                      │  "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
